tests/baselines/reference/parserComputedPropertyName36.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts(2,5): error TS1166: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts (1 errors) ====
    class C {
        [public ]: string;
        ~~~~~~~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
    }